--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="container">
             <img src="./assets/logo.svg" alt="logo">
             <nav>
-                <a href="">Inicio</a>
-                <a href="">Cursos</a>
+                <a href="">Mutuelle</a>
+                <a href="">xxx</a>
                 <a href="">Eventos</a>
                 <a href="">Contato</a>
             </nav>
